Update preview project